# growforge

./: .gitignore  FEATURES.md  LICENSE  README.md  ai_assistant.py  config.py  database.py  growforge.db  knowledge_base.py  learned_rules.py  main.py  models.py  requirements.txt
growforge-qt/: .gitignore  CMakeLists.txt  README.md
growforge-qt/packaging/: README.md  growforge.iss  sign.ps1
growforge-qt/resources/: knowledge.json  style.qss
growforge-qt/src/: main.cpp
growforge-qt/src/app/: Config.h  Paths.h  Theme.cpp  Theme.h
growforge-qt/src/core/: Exporter.cpp  Exporter.h  ReminderEngine.cpp  ReminderEngine.h  VpdCalculator.cpp  VpdCalculator.h
growforge-qt/src/data/: Database.cpp  Database.h  KnowledgeBase.cpp  KnowledgeBase.h  Models.h
growforge-qt/src/ui/: Helpers.cpp  Helpers.h  MainWindow.cpp  MainWindow.h  Page.h  ScrollPage.h  Toast.cpp  Toast.h
growforge-qt/src/ui/dialogs/: BreedingDialogs.cpp  BreedingDialogs.h  CloneBatchDialog.cpp  CloneBatchDialog.h  EnvironmentDialog.cpp  EnvironmentDialog.h  EventDialog.cpp  EventDialog.h  PlantDialog.cpp  PlantDialog.h
growforge-qt/src/ui/pages/: BreedingTab.cpp  BreedingTab.h  CalendarTab.cpp  CalendarTab.h  CloningTab.cpp  CloningTab.h  DashboardTab.cpp  DashboardTab.h  DeficiencyWizardTab.cpp  DeficiencyWizardTab.h  EnvironmentsTab.cpp  EnvironmentsTab.h  GrowingHubTab.cpp  GrowingHubTab.h  JournalTab.cpp  JournalTab.h  PlantsTab.cpp  PlantsTab.h  SettingsTab.cpp  SettingsTab.h  ToolsTab.cpp  ToolsTab.h
growforge-qt/src/ui/widgets/: CommonWidgets.cpp  CommonWidgets.h  Icons.cpp  Icons.h  VpdChart.h  (+3 more)
(+39 files in other folders)
